cac/generated/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api
  namespace: client-payments-prod
  labels:
    app: payment-api-api-production
    app.kubernetes.io/cluster-domain: prod.pks.vpayusa.net
    app.kubernetes.io/instance: payment-api-api
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: payment-api
    app.kubernetes.io/part-of: payment-api
    helm.sh/chart: payment-api-0.0.1
spec:
  revisionHistoryLimit: 4
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
  selector:
    matchLabels:
      app.kubernetes.io/instance: payment-api-api
      app.kubernetes.io/name: payment-api
  template:
    metadata:
      labels:
        app: payment-api-api-production
        app.kubernetes.io/cluster-domain: prod.pks.vpayusa.net
        app.kubernetes.io/instance: payment-api-api
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: payment-api
        app.kubernetes.io/part-of: payment-api
        helm.sh/chart: payment-api-0.0.1
    spec:
      containers:
        - name: payment-api
          image: centraluhg.jfrog.io/commpay-vpay-docker-vir/docker/payment-api/payment-web-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/about
              port: 8080
          livenessProbe:
            httpGet:
              path: /api/about
              port: 8080
          volumeMounts:
            - name: payment-api-appsettings-secure-json
              mountPath: /app/appsettings.secure.json
              subPath: appsettings.secure.json
              readOnly: true
            - name: payment-api-appsettings-json
              mountPath: /app/appsettings.json
              subPath: appsettings.json
              readOnly: true
            - name: payment-api-appsettings-json
              mountPath: /app/appsettings.Production.json
              subPath: appsettings.production.json
              readOnly: true
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 512Mi
      volumes:
        - name: payment-api-appsettings-secure-json
          secret:
            secretName: payment-api-appsettings-secure-json
        - name: payment-api-appsettings-json
          configMap:
            name: payment-api-appsettings-json
