cac/generated/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payment-api-v1
  namespace: client-payments-prod
  labels:
    app: payment-api-api-production
    app.kubernetes.io/cluster-domain: prod.pks.vpayusa.net
    app.kubernetes.io/instance: payment-api-api
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: payment-api
    app.kubernetes.io/part-of: payment-api
    helm.sh/chart: payment-api-0.0.1
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - payapi.vpayusa.net
  rules:
    - backendRefs:
        - name: payment-api
          port: 8080
